fix(Rooms): Added Colors and fixxed some bugs