@@ -5,21 +5,25 @@ import org.uniba.kobold.entities.room.RoomInteractionResult;
 import org.uniba.kobold.entities.room.RoomInteractionResultType;
 import org.uniba.kobold.parser.ParserOutput;
 import org.uniba.kobold.type.Command;
+import org.uniba.kobold.util.ColorText;
+
 import javax.swing.*;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 public final class CircuitRoom extends Room {
 
     public CircuitRoom() {
         super("circuito",
-                "Nel circuito ci sono molti coboldi che scommettono, rivolgendosi alla CASSA." +
-                        "Alcuni hanno vinto alcune pezzi di auto e esultano, altri sono in completamente disperati per aver perso tutto.",
+                "Nel circuito ci sono molti coboldi che scommettono, rivolgendosi alla " + ColorText.setTextOrange("cassiera") +
+                        " \nAlcuni hanno vinto alcune pezzi di auto e esultano, altri sono in completamente disperati per aver perso tutto.",
                 new ImageIcon("/img/BR.png"),
-                Arrays.asList(),
-                Arrays.asList(),
-                Arrays.asList(
-                    new Command("vai spiazzale", Set.of("muoviti"))
+                List.of(),
+                List.of(),
+                List.of(
+                        new Command("vai spiazzale", Set.of("muoviti")),
+                        new Command("parla cassiera", Set.of("parla"))
                 )
         );
     }
@@ -30,24 +34,30 @@ public final class CircuitRoom extends Room {
 
         switch (command.getCommand().getName()) {
             case "guarda davanti":
-                result.setSubject("Di fronte trovi la cassiera, lì otrai fare una scommessa");
+                result.setSubject("Di fronte trovi la " + ColorText.setTextOrange("cassiera") +", lì potrai fare una scommessa");
                 break;
             case "guarda dietro":
-                result.setSubject("Guardi dietro e vedi l'uscita che porta allo SPIAZZALE");
+                result.setSubject("Guardi dietro e vedi l'uscita che porta allo " + ColorText.setTextPurple("spiazzale"));
                 break;
             case "guarda destra":
                 result.setSubject("Guardi a destra e numerosi quadri e opera d'arte raffiguranti il numero due");
+                break;
+            case "guarda sotto":
+                result.setSubject("Guardi sotto e vedi il pavimento, è sporco e pieno di cicche di sigarette");
                 break;
             case "guarda sinistra":
                 result.setSubject("Guardi a sinistra e la pista, la forma ricorda il numero due");
                 break;
             case "guarda sopra":
-                result.setSubject("Vedi la parete dell'enorme caverna, è da tempo che non vedi il sole...");
+                result.setSubject("Vedi la parete dell'enorme caverna, è da tempo che non vedi il sole ...");
                 break;
             case "vai spiazzale":
-                result.setResultType(RoomInteractionResultType.MOVE);
                 result.setSubject("spiazzale");
-
+                result.setResultType(RoomInteractionResultType.MOVE);
+                break;
+            case "parla cassiera":
+                result.setSubject("cassiera");
+                result.setResultType(RoomInteractionResultType.PLAY);
                 break;
             default:
                 result.setResultType(RoomInteractionResultType.NOTHING);
